--- a/uni.cli/uni.cli.nuspec
+++ b/uni.cli/uni.cli.nuspec
@@ -12,7 +12,7 @@
         <copyright>Copyright © 2018-2019 Martin Tournoij</copyright>
         <licenseUrl>https://github.com/arp242/uni/blob/master/LICENSE</licenseUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <projectSourceUrl>https://github.com/arp242/uni/blob/master/LICENSE</projectSourceUrl>
+        <projectSourceUrl>https://github.com/arp242/uni/</projectSourceUrl>
         <docsUrl>https://github.com/arp242/uni/blob/master/README.md</docsUrl>
         <bugTrackerUrl>https://github.com/arp242/uni/issues</bugTrackerUrl>
         <tags>uni unicode codepoint</tags>
