--- a/uni.cli/uni.cli.nuspec
+++ b/uni.cli/uni.cli.nuspec
@@ -2,13 +2,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
     <metadata>
         <id>uni.cli</id>
-        <version>2.4.0.20220207</version>
+        <version>2.4.0.202202072100</version>
         <packageSourceUrl>https://github.com/brianary/au-packages/</packageSourceUrl>
         <owners>brianary</owners>
         <title>uni: Unicode database command-line query tool</title>
         <authors>Martin Tournoij (arp242), et al.</authors>
         <projectUrl>https://github.com/arp242/uni/</projectUrl>
-        <iconUrl>https://raw.githubusercontent.com/brianary/au-packages/master/uni.cli/icons/uni-logo.png</iconUrl>
+        <iconUrl>https://rawcdn.githack.com/brianary/au-packages/f92451b7c402455dfd22ed38be03dbab51e240ed/uni.cli/icons/uni-logo.png</iconUrl>
         <copyright>Copyright © 2018-2019 Martin Tournoij</copyright>
         <licenseUrl>https://github.com/arp242/uni/blob/master/LICENSE</licenseUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
